--- a/views/fcFleetManage.njk
+++ b/views/fcFleetManage.njk
@@ -372,7 +372,7 @@
       }).done(function () {
           location.reload();
       }).error(function (err){
-          console.log("Error updating the backseat: ",err);
+          console.log("Error updating the fleet commander: ",err);
       })   
     }
 
